# Curvy-JMM

./: .gitignore  README.md  wsFMMProject.code-workspace
FMM/: #eik_grid.c#  #plot_onGeometry.py#  .#eik_grid.c  .#opti_method.c  .#plot_onGeometry.py  AnalyticSolutionTestGeometry.py  BoundaryPoints.txt  FMM_naive2D  FMM_naive2D.c  FMMproject.pem  Faces.txt  Facets.txt  MeshPoints.txt  SoSFunction.c  SoSFunction.h  SolveTestGeometry  SolveTestGeometry.c  VideoSolutionCircle.py  analyticSol_circle.py  build.sh  caustics.c  caustics.c~  caustics.h  circle.py  coord.c  coord.h  eik_grid.c  eik_grid.c~  eik_grid.h  errorPlots.py  errorPlots_parts.py  faces.c  faces.h  facets.c  facets.h  ffiles.c  files_methods.c  files_methods.h  fmm_2d.c  fmm_2d.h  (+82 more)
FMM/MeshInfo/: BoundaryPoints.txt  BoundaryPoints_Sq.txt  Faces.txt  FacesLabel.txt  FacesLabel_Sq.txt  Faces_Sq.txt  Facets_Sq.txt  IncidentFaces.txt  IncidentFaces_Sq.txt  MeshPoints.txt  MeshPoints_Sq.txt  Neigh.txt  NeighTriangles_Sq.txt  Neigh_Sq.txt
FMM/TestArch/: BoundaryPoints.txt  Faces.txt  FacesLabel.txt  Facets.txt  IncidentFaces.txt  MeshPoints.txt  Neigh.txt  NeighTriangles.txt
FMM/TestBaseSnow/: true_solGrid_360_420.txt  type_Sol_360_420.txt
FMM/TestSquare/: BoundaryPoints.txt  Faces.txt  H1_Faces.txt  H1_Facets.txt  H1_IncidentFaces.txt  H1_MeshPoints.txt  H1_Neigh.txt  H1_NeighTriangles.txt  H2_Faces.txt  H2_IncidentFaces.txt  H2_MeshPoints.txt  H2_Neigh.txt  H2_NeighTriangles.txt  H3_Faces.txt  H3_IncidentFaces.txt  H3_MeshPoints.txt  H3_Neigh.txt  H3_NeighTriangles.txt  H4_Faces.txt  H4_IncidentFaces.txt  (+14 more)
(+1069 files in other folders)
